Fixed bug in Safari 4 caused by text-align=justify in parent container
git-svn-id: http://svn.wp-plugins.org/codecolorer/trunk@149734 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/codecolorer.css
+++ b/codecolorer.css
@@ -1,7 +1,7 @@
 /* Layout */
-.codecolorer { padding: 5px; }
+.codecolorer { padding: 5px; text-align: left; }
 code.codecolorer { padding: 2px; }
-.codecolorer-container { margin-bottom: 10px; }
+.codecolorer-container { margin-bottom: 10px; text-align: left; }
 .codecolorer, .codecolorer *, .codecolorer-container, .codecolorer-container * { font: 13px/1.4em Monaco, Lucida Console, monospace }
 
 .codecolorer-container table { border: 0px; }
